# clawcrew

./: .env.example  .gitignore  Dockerfile  README.md  UPDATES.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.sh
dashboard/: api.py  dashboard.py  requirements.txt  run.sh  rxconfig.py
dashboard-reflex/: run.sh  rxconfig.py
dashboard-reflex/dashboard_reflex/: dashboard_reflex.py  data_fetcher.py  state.py  theme.py
dashboard-reflex/dashboard_reflex/components/: agent_card.py  agent_drawer.py  common.py  live_logs.py  sidebar.py  task_stepper.py  token_chart.py
dashboard/.streamlit/: config.toml
dashboard/dashboard/: __init__.py  dashboard_reflex.py  data_fetcher.py  state.py  theme.py
dashboard/dashboard/components/: __init__.py  agent_drawer.py  sidebar.py
dashboard/dashboard/views/: __init__.py
docker/: entrypoint.sh
docs/: knowledge-sharing.md
homebrew/: clawcrew.rb
scripts/: knowledge-init.sh  orca-delegate.sh
src/clawcrew/: __init__.py  __main__.py
src/clawcrew/agents/: __init__.py
src/clawcrew/cli/: __init__.py  agents.py  chain.py  github.py  init.py  main.py  run.py  system.py
src/clawcrew/core/: __init__.py  config.py  llm.py  memory.py
src/clawcrew/integrations/: __init__.py
src/clawcrew/templates/: __init__.py
src/clawcrew/utils/: __init__.py  errors.py  validators.py
templates/team-knowledge/: INDEX.md
templates/team-knowledge/conventions/: agent-workflow.md
workspace-code/: SOUL.md  SOUL_CN.md
workspace-design/: SOUL.md  SOUL_CN.md
workspace-github/: SOUL.md
workspace-orca/: ClawCrew.md  SOUL.md  SOUL_CN.md
workspace-repo/: SOUL.md
workspace-test/: SOUL.md  SOUL_CN.md
(+1 files in other folders)
