[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawcrew"
version = "0.3.0"
description = "Multi-agent AI team framework for OpenClaw"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nancy" }
]
keywords = ["ai", "agents", "multi-agent", "openclaw", "telegram"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
clawcrew = "clawcrew.cli.main:app"

[project.urls]
Homepage = "https://github.com/lanxindeng8/clawcrew"
Repository = "https://github.com/lanxindeng8/clawcrew"
Issues = "https://github.com/lanxindeng8/clawcrew/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/workspace-*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clawcrew"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
